# QML-for-Beginners

./: .gitignore.txt  README.md
Build-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  approot_object_and_ids_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake  qtcsettings.cmake
Build-Debug/.qt/: QtDeploySupport.cmake
Build-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_appRoot_Object_and_IDs.rsp
Build-Debug/.qtc_clangd/: compile_commands.json
Build-Debug/.rcc/: appRoot_Object_and_IDs_raw_qml_0.qrc  qmake_Root_Object_and_IDs.qrc  qrc_appRoot_Object_and_IDs_raw_qml_0.cpp  qrc_qmake_Root_Object_and_IDs.cpp
Build-Debug/Root_Object_and_IDs/: Main.qml  appRoot_Object_and_IDs_qml_module_dir_map.qrc  qmldir
Build-Debug/appRoot_Object_and_IDs_autogen/: deps
Section_3_Diving_into_QML/Cooments/: CMakeLists.txt  Main.qml  main.cpp
Section_3_Diving_into_QML/ObjectInterationTapHandler/: CMakeLists.txt  Main.qml  main.cpp
Section_3_Diving_into_QML/ParentAndChildTransformations/: CMakeLists.txt  main.cpp
Section_3_Diving_into_QML/Positioning/: CMakeLists.txt  Main.qml  main.cpp
Section_3_Diving_into_QML/QMLObjectsVSQObjects/: CMakeLists.txt  Main.qml  main.cpp
Section_3_Diving_into_QML/Root_Object_and_IDs/: CMakeLists.txt  Main.qml  main.cpp
Section_3_Diving_into_QML/Task2_Section3_Assignment/: CMakeLists.txt  Main.qml  main.cpp
Section_3_Diving_into_QML/build-ParentAndChildTransformations-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  (+2 more)
Section_4_Basic_Types/Qml_text_type/: CMakeLists.txt  Main.qml  main.cpp
(+76 files in other folders)
